css/style.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
@import 'https://fonts.googleapis.com/css?family=Lato:400,700';

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
body{
    background: #EEEEEE;
    font-family: 'Lato' sans-serif;
    color: black;
    position: relative;
}
#header{
    max-width: 100%;
    padding: .5rem 2rem;
    min-height: 75px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    position: fixed;
    top: 0;
    width: 100%;
}
#logo{
    max-width: 10rem;
    width: 100%;
}
#header-img{
    max-width: 100%;
}
nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
ul{
    list-style: none;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.nav-link{
    font-size: clamp(.6rem, .5vw, 1.5rem);
    margin-left: .7rem;
}
a{
    text-decoration: none;
    color: black;
}
#main{
    width: 100%;
    margin: 0 auto;
    padding: 5rem 1rem;
}
#heading{
    font-size: 1.4rem;
    text-align: center;
}
#form{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding-top: 1rem;
    margin-bottom: 2rem;
}
#email{
    margin-bottom: 1rem;
    padding: .3rem;
    max-width: 15rem;
    width: 100%;
}
#submit{
    padding: .3rem .7rem;
    font-weight: 800;
    font-size: .9rem;
    background:#f1c40f;
    border: none;
    border-radius: 3px;
}
#features-sec{
    margin: 6rem 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.feature{
    display: flex;
    align-items: center;
    justify-content: flex-start;
    margin: 3rem 0;
}
i{
    display: block;
    font-size: 3rem;
    margin-right: 1.5rem;
    color: #ff8c00;
}
.feature-head{
    margin: 0;
    font-size: 1.5rem;
    font-weight: 600;
}
.feature-text{
    margin: 0;
    font-size: 1rem;
    line-height: 1.3rem;
}
#video-sec{
    width: 100%;
    display: flex;
    justify-content: center;
}
iframe{
    max-width: 100%;
}
#works-sec{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 4rem 0;
    gap: 1rem 0;
}
.works-item{
    border: 1px solid black;
    max-width: 18rem;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.item-head{
    background: #dddddd;
    width: 100%;
    text-align: center;
    padding: 1rem 0;
    margin-bottom: .6rem;
    font-size: 1rem;
    font-weight: bold;
}
.price{
    font-size: 1.5rem;
    font-weight: bolder;
    margin: .6rem 0;
    padding: 0;
}
.descriptions{
    font-size: .9rem;
    margin: .5rem 0;
    text-align: center;
}
.desc{
    margin: .5rem 0;
}
.select-btn{
    background-color: #f1c40f;
    margin: .7rem 0;
    padding: .6rem 1.2rem;
    border-radius: 3px;
}
#footer{
    background: #dddddd;
    padding: 1rem;
}
#footer-nav{
    display: flex;
    justify-content: flex-end;
    gap: 0 .5rem;
}
.nav{
    display: flex;
    flex-direction: column;
    gap: .3rem 0;
    text-align: center;
}
.footer-link{
    font-size: 1rem;
}
.footer-text{
    font-size: .8rem;
}

@media only screen and (min-width: 480px){
    #main{
        width: 80%;
        margin: 0 auto;
    }
    .nav-link{
        font-size: 1rem;
        margin-left: .7rem;
    }
    #logo{
        max-width: 15rem;
        width: 100%;
    }
}
@media only screen and (min-width: 768px){
    #main{
        width: 70%;
        margin: 0 auto;
    }
    #works-sec{
        display: flex;
        flex-direction: row;
        margin: 4rem 0;
        gap: 0 1rem;
    }
    .nav-link{
        font-size: 1.2rem;
        margin-left: .7rem;
    }
    #header{
        max-width: 100%;
        padding: .5rem 3rem;
        margin-bottom: 1rem;
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
    #logo{
        max-width: 17rem;
        width: 100%;
    }
}
@media only screen and (min-width: 1024px){
    #main{
        width: 60%;
        margin: 0 auto;
    }
    .nav-link{
        font-size: 1.3rem;
        margin-left: .7rem;
    }
    #logo{
        max-width: 20rem;
        width: 100%;
    }
}

